--- a/ColdCallsTracker/ColdCallsTracker/Pages/Companies/Edit.cshtml
+++ b/ColdCallsTracker/ColdCallsTracker/Pages/Companies/Edit.cshtml
@@ -130,18 +130,54 @@
         </div>
     </div>
     <div v-show="currentTab === 'costings'" class="costings-tab">
-        <div class="d-flex" >
-            <div class="dropdown ml-2 mt-2">
+        <div class="d-flex">
+            <div class="dropdown mt-2">
                 <button class="btn btn-secondary btn-sm dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     Добавить смету из шаблона
                 </button>
                 <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                    <a class="dropdown-item" href="#">Интернет магазин MIN</a>
-                    <a class="dropdown-item" href="#">Сайт визитка</a>
-                    <a class="dropdown-item" href="#">Корпоративный сайт</a>
+                    <a class="dropdown-item" href="javascript:;">Интернет магазин MIN</a>
+                    <a class="dropdown-item" href="javascript:;">Сайт визитка</a>
+                    <a class="dropdown-item" href="javascript:;">Корпоративный сайт</a>
                 </div>
             </div>
-            <span class="btn btn-primary btn-sm ml-2 mt-2" >Добавить пустую смету</span>
+            <span class="btn btn-primary btn-sm ml-2 mt-2">Добавить пустую смету</span>
+        </div>
+        <div>
+            <div class="card mt-2">
+                <div class="card-header d-flex">
+                    <div class="quote-header-wrapper pl-2 mr-2 d-flex">
+                        <i class="fas fa-angle-down mt-1"></i>
+                        <span class="quote-header ml-2">
+                            <input type="text" value="Интернет магазин и лендинг" class="form-control-xs form-control" />
+                        </span>
+                    </div>
+                    <span class="badge badge-info mr-2 date-changed-info">изм: 10 янв 19</span>
+                    <span class="btn btn-danger btn-xs float-right"><i class="fas fa-times"></i></span>
+                </div>
+                <div class="card-body">
+                    <div class="costing-templates-page">
+                        <table class="table-xs table table-bordered table-hover table-striped mb-0">
+                            <thead class="thead-dark">
+                                <tr>
+                                    <th class="id">#</th>
+                                    <th class="category">Категория</th>
+                                    <th>Название</th>
+                                    <th class="qty">Кол.</th>
+                                    <th class="unit">Юнит</th>
+                                    <th class="cost">Цена</th>
+                                    <th class="total">Всего</th>
+                                    <th class="multiplier">Множ.</th>
+                                    <th class="multiplier">Мн. Всего</th>
+                                    <th class="actions">
+                                    </th>
+                                </tr>
+                            </thead>
+                            <tbody></tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
