--- a/ColdCallsTracker/ColdCallsTracker/Pages/CostingTemplates/Index.cshtml
+++ b/ColdCallsTracker/ColdCallsTracker/Pages/CostingTemplates/Index.cshtml
@@ -78,7 +78,7 @@
                 </td>
                
                 <td class="actions">
-                    <span v-on:click="removeItem(item)" class="btn btn-sm btn-danger"><i class="fas fa-trash-alt"></i></span>
+                    <span v-on:click="removeItem(item)" class="btn btn-sm btn-danger remove-costing-item"><i class="fas fa-trash-alt"></i></span>
                 </td>
             </tr>
         </tbody>
